--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aru",
-	"version": "0.0.10",
+	"version": "0.0.11",
 	"description": "A modular Discord bot powered by Eris with miscellaneous functions",
 	"author": "PyroclasticMayhem",
 	"license": "MIT",
@@ -26,13 +26,13 @@
 		"aru"
 	],
 	"dependencies": {
-		"eris": "abalabahaha/eris#dev",
-		"axios": "*",
-		"moment": "*",
-		"winston": "*",
-		"require-dir": "*"
+		"eris": "^0.8.2",
+		"axios": "^0.17.1",
+		"moment": "^2.20.1",
+		"winston": "^2.4.0",
+		"require-dir": "^0.3.2"
 	},
 	"devDependencies": {
-		"standard": "*"
+		"standard": "^10.0.3"
 	}
 }
