--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aru",
-	"version": "0.0.14",
+	"version": "0.0.15",
 	"description": "A modular Discord bot powered by Eris with miscellaneous functions",
 	"author": "PyroclasticMayhem",
 	"license": "MIT",
@@ -27,12 +27,13 @@
 		"music"
 	],
 	"dependencies": {
-		"eris": "^0.8.4",
 		"axios": "^0.17.1",
+		"eris": "^0.8.4",
 		"moment": "^2.20.1",
-		"winston": "^2.4.0",
-		"require-dir": "^1.0.0",
 		"node-opus": "^0.2.7",
+		"require-dir": "^1.0.0",
+		"simple-youtube-api": "^5.0.1",
+		"winston": "^2.4.0",
 		"ytdl-core": "^0.20.1"
 	},
 	"devDependencies": {
