--- a/config.json
+++ b/config.json
@@ -5,6 +5,8 @@
   "time_format": "ddd MMM DD YYYY | kk:mm:ss",
   "discord_pw_key": "",
   "carbonitex_key": "",
+  "discordbots_key": "",
+  "discordbots_id": "",
   "tmdb_key": "",
   "youtube_key": "",
   "token": ""
