--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aru",
-	"version": "0.0.18",
+	"version": "0.0.19",
 	"description": "A modular Discord bot powered by Eris with miscellaneous functions",
 	"author": "PyroclasticMayhem",
 	"license": "MIT",
@@ -34,9 +34,10 @@
 		"require-dir": "^1.0.0",
 		"simple-youtube-api": "^5.0.1",
 		"winston": "^2.4.0",
-		"ytdl-core": "^0.20.1"
+		"ytdl-core": "^0.20.2"
 	},
 	"devDependencies": {
+		"ajv": "^6.1.1",
 		"eslint": "^4.18.1",
 		"eslint-config-standard": "^11.0.0",
 		"eslint-plugin-import": "^2.9.0",
