Add Checks to Join/Leave Messages and Change Path to Follow New Config

--- a/config.json
+++ b/config.json
@@ -22,7 +22,11 @@
   },
   "messages": {
     "join_leave": {
-      
+      "guild_id": {
+        "channel_id": "",
+        "join_message": "",
+        "leave_message": ""
+      }
     }
   }
 }
