Remove discordbots_id

--- a/config.json
+++ b/config.json
@@ -11,8 +11,7 @@
     "botlist_sites": {
       "discord_pw_key": "",
       "carbonitex_key": "",
-      "discordbots_key": "",
-      "discordbots_id": ""
+      "discordbots_key": ""
     },
     "information": {
       "tmdb_key": "",
