Added New Parameters for Join/Leave Msg
Username, discriminator, and id

--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
       "guild_id": {
         "channel_id": "",
         "join_message": "Welcome {mention} to {guild_name}.",
-        "leave_message": "Farewell {mention}!"
+        "leave_message": "Farewell {name}#{discriminator}!"
       }
     }
   }
