--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aru",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "A modular Discord bot powered by Eris with miscellaneous functions",
 	"author": "PyroclasticMayhem",
 	"license": "MIT",
@@ -15,7 +15,7 @@
 	},
 	"scripts": {
 		"start": "node bot.js",
-		"lint": "eslint **/*.js --ignore-pattern node_modules/"
+		"lint": "eslint **/*.js --ignore-pattern node_modules/; exit 0"
 	},
 	"keywords": [
 		"discord",
@@ -31,18 +31,19 @@
 		"eris": "^0.8.5",
 		"glob": "^7.1.2",
 		"moment": "^2.21.0",
+		"mongoose": "^5.0.10",
 		"node-opus": "^0.2.7",
 		"simple-youtube-api": "^5.0.1",
-		"winston": "^2.4.0",
+		"winston": "^2.4.1",
 		"ytdl-core": "^0.20.2"
 	},
 	"devDependencies": {
-		"ajv": "^6.2.1",
-		"eslint": "^4.18.2",
+		"ajv": "^6.3.0",
+		"eslint": "^4.19.0",
 		"eslint-config-standard": "^11.0.0",
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-node": "^6.0.1",
-		"eslint-plugin-promise": "^3.6.0",
+		"eslint-plugin-promise": "^3.7.0",
 		"eslint-plugin-standard": "^3.0.1"
 	}
 }
