--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"mongoose": "^5.0.11",
 		"node-opus": "^0.2.7",
 		"simple-youtube-api": "^5.0.1",
-		"winston": "^2.4.1",
+		"winston": "^3.0.0-rc3",
 		"ytdl-core": "^0.20.2"
 	},
 	"devDependencies": {
