--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"eris": "^0.8.5",
+		"express": "^4.16.3",
 		"glob": "^7.1.2",
 		"moment": "^2.21.0",
 		"mongoose": "^5.0.12",
