--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
 	},
 	"devDependencies": {
 		"ajv": "^6.4.0",
+		"ajv-keywords": "^3.1.0",
 		"eslint": "^4.19.1",
+		"eslint-config-semistandard": "^12.0.1",
 		"eslint-config-standard": "^11.0.0",
 		"eslint-plugin-import": "^2.10.0",
 		"eslint-plugin-node": "^6.0.1",
