--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ version: '3'
 services:
   app:
     build: .
+    restart: always
     command: npm start
     volumes:
-      - .:/usr/app/
-      - /usr/app/node_modules
+      - .:/app/
+      - /app/node_modules
     ports:
       - "5000:5000"
     depends_on:
@@ -15,4 +16,7 @@ services:
       - "mongo:mongo"
   mongo:
     image: mongo:latest
-  
+    volumes:
+      - /db:/data/db
+    ports:
+      - "27017:27017"
