--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aru",
-	"version": "0.3.2",
+	"version": "0.3.3",
 	"description": "A modular Discord bot powered by Eris with miscellaneous functions",
 	"author": "PyroclasticMayhem",
 	"license": "MIT",
@@ -30,6 +30,7 @@
 		"axios": "^0.18.0",
 		"eris": "^0.8.5",
 		"express": "^4.16.3",
+		"ffmpeg-binaries": "^3.2.2-3",
 		"glob": "^7.1.2",
 		"moment": "^2.22.0",
 		"mongoose": "^5.0.12",
