Add missing . in mongo volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,6 @@ services:
   mongo:
     image: mongo:latest
     volumes:
-      - /db:/data/db
+      - ./db:/data/db
     ports:
       - "27017:27017"
