--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Configuration
-config.json
-
 # Logs
 logs
 *.log
@@ -39,7 +36,7 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
+# TypeScript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -59,3 +56,6 @@ typings/
 
 # dotenv environment variables file
 .env
+
+# next.js build output
+.next
