--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"scripts": {
 		"start": "cd src && node bot.js",
-		"lint": "eslint **/*.js --ignore-pattern node_modules/; exit 0"
+		"lint": "eslint src/*"
 	},
 	"keywords": [
 		"discord",
@@ -34,14 +34,14 @@
 		"express": "^4.16.3",
 		"glob-promise": "^3.4.0",
 		"moment": "^2.22.1",
-		"mongoose": "^5.0.17",
-		"uws": "^9.148.0"
+		"mongoose": "^5.1.1",
+		"uws": "^10.148.0"
 	},
 	"devDependencies": {
 		"eslint": "^4.19.1",
 		"eslint-config-semistandard": "^12.0.1",
-		"eslint-config-standard": "^12.0.0-alpha.0",
-		"eslint-plugin-import": "^2.11.0",
+		"eslint-config-standard": "^11.0.0",
+		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-node": "^6.0.1",
 		"eslint-plugin-promise": "^3.7.0",
 		"eslint-plugin-standard": "^3.1.0"
