--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   lavalink:
     image: fredboat/lavalink:master
-    container_name: lavalink
+    container_name: aru-lavalink
     restart: always
     environment:
       - SERVER_PORT=2333
